--- a/web/splash/style.css
+++ b/web/splash/style.css
@@ -5,7 +5,7 @@ html {
 body {
   margin: 0;
   min-height: 100%;
-  background-color: #8959B0;
+  background-color: #FF9800;
   background-size: 100% 100%;
 }
 
